--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,17 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "i": "^0.3.6",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "mapbox-gl": "^1.12.0",
     "multiselect-react-dropdown": "^1.6.1",
+    "npm": "^7.16.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.4.0",
     "react-chat-widget": "^3.0.5",
     "react-dom": "^16.6.3",
+    "react-ellipsis-text": "^1.2.1",
     "react-hook-form": "^5.4.2",
     "react-mapbox-gl": "^5.1.1",
     "react-modal": "^3.12.1",
