--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@babel/runtime": "^7.14.5",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.5.3",
@@ -17,6 +18,7 @@
     "react-chat-widget": "^3.0.5",
     "react-dom": "^16.6.3",
     "react-hook-form": "^5.4.2",
+    "react-icons": "^4.2.0",
     "react-mapbox-gl": "^5.1.1",
     "react-modal": "^3.12.1",
     "react-player": "^2.3.1",
