--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
+    "react-switch": "^6.0.0",
     "react-toastify": "^6.2.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.1",
@@ -45,7 +46,7 @@
     "test": "react-scripts test",
     "build-sw": "node ./src/sw-build.js"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
