--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "express": "^4.17.1",
         "express-formidable": "^1.2.0",
         "express-session": "^1.17.1",
+        "googleapis": "^84.0.0",
         "is-empty": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.13",
