--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.4.0",
     "react-chat-widget": "^3.0.5",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.6.3",
     "react-ellipsis-text": "^1.2.1",
     "react-hook-form": "^5.4.2",
