--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "@admin-bro/express": "^3.1.0",
         "@admin-bro/mongoose": "^1.1.0",
         "admin-bro": "^3.4.0",
+        "argon2": "^0.28.2",
         "bcrypt": "^4.0.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
